Kubernetes-Manifests-file/overlays/staging/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: todolist-staging-ingress

spec:
  ingressClassName: traefik

  rules:
  - host: staging.local

    http:
      paths:

      - path: /
        pathType: Prefix
        backend:
          service:
            name: todolist-frontend-service
            port:
              number: 3000


      - path: /api
        pathType: Prefix
        backend:
          service:
            name: todolist-backend-service
            port:
              number: 3500


      - path: /mongo-express
        pathType: Prefix
        backend:
          service:
            name: mongo-express-service
            port:
              number: 8081
